<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#87CEFA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAccountActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_user_username_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:startIconDrawable="@drawable/android_user_32">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_user_email_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/android_email_32"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_username_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_email_input"
            android:paddingStart="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_user_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/android_lock_32"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_email_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_password_input"
            android:paddingStart="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_changes_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button"
        android:text="Save Changes"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_password_wrapper" />

    <TextView
        android:id="@+id/textView3"
        android:background="#008B8B"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Edit Profile Settings:"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>